fix whitespace addspan

--- a/assets/css/baernreither.css
+++ b/assets/css/baernreither.css
@@ -1406,7 +1406,7 @@ body::-webkit-scrollbar-thumb {
 
 .addSpan {
   background-color:rgba(200, 190, 200, 0.2);
-  padding:0 2px;
+  /*padding:0 2px;*/
   line-height:1rem;
 }
 .del {
